Fix container too close to nav

--- a/core/static/core/generic.css
+++ b/core/static/core/generic.css
@@ -26,6 +26,7 @@ h1,h2,h3,h4{
 .navbar{
     z-index: 2;
     box-shadow: black 0pt 8pt 5pt -5pt;
+    margin-bottom: 20pt;
 }
 
 .navbar-nav .nav-link{
@@ -37,10 +38,4 @@ h1,h2,h3,h4{
 
 .nav-item:hover{
     background-color: #ececec;
-}
-
-/* Content styling */
-
-.content{
-    margin-top: 20px;
 }
